# hyak-mcp

./: README.md  pyproject.toml
klone_mcp/: server.py  slurm.py  ssh.py
