[project]
name = "klone-mcp"
version = "0.1.0"
description = "MCP server for UW Hyak (klone) cluster"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["klone_mcp"]

[project.scripts]
klone-mcp = "klone_mcp.server:mcp.run"
